# fga-wg

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  dodo.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
AccessMethod/: index.html
AccessMethods/: index.html
AccessURL/: index.html
Analysis/: index.html
Any/: index.html
AssessmentValue/: index.html
BiospecimenClassification/: index.html
Boolean/: index.html
Bundle/: index.html
BundleMetadata/: index.html
Checksum/: index.html
Contact/: index.html
Curie/: index.html
DataTypes/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Deposit/: index.html
Donor/: index.html
Double/: index.html
Experiment/: index.html
File/: index.html
FileCollection/: index.html
Float/: index.html
GenomeAssembly/: index.html
GenomicAnnotationFile/: index.html
InputSource/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
OntologyVersions/: index.html
OutputType/: index.html
QualityAssessment/: index.html
Sample/: index.html
Sparqlpath/: index.html
String/: index.html
Study/: index.html
Term/: index.html
Time/: index.html
TrackGeometry/: index.html
Uri/: index.html
Uriorcurie/: index.html
access_method/: index.html
access_methods/: index.html
access_url/: index.html
accessions/: index.html
aliases/: index.html
analyses/: index.html
analysis_description/: index.html
analysis_external_id/: index.html
analysis_id/: index.html
analysis_input_sources/: index.html
analysis_label/: index.html
analysis_main_tool/: index.html
analysis_main_tool_version/: index.html
analysis_protocol/: index.html
analysis_study_ref/: index.html
analysis_type/: index.html
analysis_workflow/: index.html
antibody_target/: index.html
assay_type/: index.html
assessment_details_url/: index.html
assessment_method/: index.html
assessment_values/: index.html
schema/: .gitignore  Makefile  README.md  annotation.yaml  pyproject.toml
schema/examples/data/: README.md  example-annotation.yaml  example-collection.yaml  example-experiment.yaml  example-minimal.yaml  example-project.yaml  example-protocol.yaml  example-sample.yaml  example-workflow.yaml
schema/fga_schema/schema/: annotation.yml  core.yml  enums.yml  sample.yml  types.yml
(+390 files in other folders)
