[tool.poetry]
name = "fga-schema"
version = "0.1.0"
description = "LinkML schema for FAIR genomic annotations"
authors = ["FAIR Genomic Annotation Working Group"]
license = "MIT"
readme = "README.md"
packages = [{include = "fga_schema", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.5.0"
linkml-runtime = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
fga-validate = "fga_schema.cli:validate_cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
